--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ asyncpg==0.31.0
 certifi==2025.11.12
 cffi==2.0.0
 click==8.3.1
+cloudinary==1.44.1
 cross-web==0.4.0
 ecdsa==0.19.1
 fastapi==0.128.0
@@ -43,6 +44,7 @@ starlette==0.50.0
 strawberry-graphql==0.288.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+urllib3==2.6.2
 uvicorn==0.40.0
 uvloop==0.22.1
 watchfiles==1.1.1
