--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+aiokafka==0.12.0
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
 argon2-cffi==25.1.0
 argon2-cffi-bindings==25.1.0
+async-timeout==5.0.1
 asyncpg==0.31.0
 certifi==2025.11.12
 cffi==2.0.0
